html heading, css syntax, css selector

--- a/LearnFontEnd/learnCSS/style.css
+++ b/LearnFontEnd/learnCSS/style.css
@@ -1,3 +1,9 @@
 /*  -css là ngôn ngữ tạo kiểu cho tài liệu html
     -css mô tả cách html element hiển thị
+    -css viết tắt của cascading style sheets
  */
+
+
+/*                     declaration     declaration
+    Syntax: selector {property: value, property: value, ...} 
+*/
